# neuroPID

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: msvc-code-analysis.yml
src/: RCa24704  main.cpp  neuroPID.cpp  nn_manager.cpp  nn_manager.h  plant.cpp  plant.h  sample.cpp  sample.h
src/data/: PID_tuner_learning.data  emul_k.data  emul_k_z.data  emul_learning.data  emul_learning_z.data  emul_q.data  tuner_q.data
src/emulator_static_learn/: main.cpp
src/emulator_static_learn_vc/: main.cpp
src/neuroPID_vc/: main.cpp
